[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://textures/chalk_2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 8.41446 )

[node name="Bullet" type="Area2D"]
position = Vector2( 0, 98 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 34.5, 2.50002 )
rotation = 0.872665
scale = Vector2( 0.0698835, 0.0657493 )
texture = ExtResource( 2 )

[node name="CollisionBullet" type="CollisionShape2D" parent="."]
position = Vector2( 40, 6 )
shape = SubResource( 1 )

[node name="NotifyVisibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( 39.5, 5 )
scale = Vector2( 2.95, 1 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="NotifyVisibility" to="." method="_on_NotifyVisibility_screen_exited"]
